set button whitespace to nowrap.  Should fix #817

--- a/frameworks/projects/MXRoyale/src/main/resources/defaults.css
+++ b/frameworks/projects/MXRoyale/src/main/resources/defaults.css
@@ -49,6 +49,10 @@ global {
 	errorColor: #CE2929;
 }
 
+Button {
+	white-space: nowrap;
+}
+
 /* -------------------------------------------------------
  * Common Platform Styles
  * -------------------------------------------------------
